--- a/style.css
+++ b/style.css
@@ -1,4 +1,4 @@
-*{padding:0;margin:0;}
+*{padding:0;margin:0;box-sizing: border-box;}
 #board{
   border:2px solid red;
   display:inline-block;
@@ -61,6 +61,24 @@ body{
   background: rgba(0,0,0,0.6);
   color:#fff;
 }
-#hiddenObject{
+.hiddenObject{
   display: none;
+}
+/**/
+#userLogin{
+  width:300px;
+  border:1px solid gray;
+  margin:50px auto;
+  padding:40px 10px;
+  border-radius: 4px;
+}
+#gameOverTextNode{
+  margin:15px 0;
+}
+#playerName{
+  width:100%;
+  padding:6px 4px;
+  text-transform: uppercase;
+  border-radius: 2px;
+  border:1px solid gray;
 }
