--- a/style.css
+++ b/style.css
@@ -1,6 +1,6 @@
 *{padding:0;margin:0;box-sizing: border-box;}
 #board{
-  border:2px solid red;
+  border:2px solid #446CB3;
   display:inline-block;
 }
 body{
@@ -15,7 +15,6 @@ body{
   margin: 0 !important;
   padding:0;
 }
-
 .lastInRow:after{
   content: '';
   display: block;
@@ -75,10 +74,46 @@ body{
 #gameOverTextNode{
   margin:15px 0;
 }
-#playerName{
-  width:100%;
+#playerName,#newPlayerName{
+  width:80%;
   padding:6px 4px;
   text-transform: uppercase;
   border-radius: 2px;
   border:1px solid gray;
 }
+#leaderBoardHaed{
+  margin:10px auto 4px;
+}
+#leaderBoard,#leaderBoardHead{
+  display: inline-block;
+  border-collapse: collapse;
+}
+#leaderBoardWrapper{
+  height:300px;
+  overflow-y: auto;
+  display: inline-block;
+}
+#leaderBoard tbody tr td,
+#leaderBoard thead tr th{
+  width:200px;
+  padding:10px; 
+  border:1px solid #013243;
+  width:200px;
+}
+#leaderBoard thead tr th:first-child,
+#leaderBoard tbody tr td:first-child{
+  width:50px !important;
+}
+#leaderBoard thead tr th{
+  background:#446CB3;
+  color:#E4F1FE; 
+  border:1px solid #013243;
+}
+.currentPlayer{
+  background: #22313F;
+}
+.currentPlayer td {
+  border: 1px solid #E4F1FE !important;
+  color:#E4F1FE;
+}
+/* ------------------------------- */
